V1.1 - Added "additions", conditions appended to other conditions to make them harder - Removed some conditions(some turned to additions, others completely gone) - Added some conditions - Added a dark mode - Highscore auto updates - Added a note to play game on my website if you're offline - Fixed the background and scrolling issues on some devices

--- a/style.css
+++ b/style.css
@@ -1,36 +1,29 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100..700;1,100..700&family=Roboto+Slab:wght@100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
+:root {
+    --text: #333;
+    --bg: #fff;
+    --accent: #fffae9;
+    --high-contrast-text: #000;
+    --alt-bg: #0000003a;
+}
+
 * {
     font-family: "Roboto", sans-serif;
     font-weight: 500;
     font-style: normal;
     transition-duration: 1s;
-    color: #333;
+    color: var(--text);
     text-wrap: balance;
     word-wrap: break-word;
     scrollbar-width: none;
+    background-color: var(--bg);
 }
 
 @media only screen and (max-width: 850px) {
     body {
         font-size: xx-small;
     }
-}
-
-#c {
-    background-color: #fffae9;
-    /*background-image: url('dot.png');
-    background-size: 1%;*/
-    position: absolute;
-    left: 50%;
-    top: 0px;
-    translate: -50% 0%;
-    z-index: -1;
-    height: 100%;
-    width: 100%;
-    min-width: 1200px;
-    min-height: 1200px;
-    /*opacity: 50%;*/
 }
 
 *:not(h1){
@@ -59,21 +52,21 @@ p{
     font-weight: 300;
     border-radius: 5%;
     width: 35%;
-    background-color: rgba(200, 200, 200, 0.33);
-    color: black;
+    background-color: var(--alt-bg);
+    color: var(--high-contrast-text);
     border: none
 }
 
 input{
-    border: 0px;
+    border: 1px var(--alt-bg) solid;
     opacity: 75%;
+    color: var(--high-contrast-text);
 }
 input[type='button']{
     font-family: 'Roboto Slab', serif;
     font-size: x-large;
-    border-radius: 6%;
+    border-radius: 8%;
     height: auto;
-
 }
 input[type='button']:hover{
     cursor: pointer;
@@ -84,9 +77,6 @@ input[type='number']{
     font-size: x-large;
     border-radius: 4%;
     height: auto;
-}
-input[type='number']::before{
-    content: '+';
 }
 input:focus{
     outline: none;
@@ -101,7 +91,8 @@ input:focus{
 }
 
 .celebrate{
-    text-shadow: 1px 1px 10px lime
+    text-shadow: 1px 1px 10px lime;
+    background-color: inherit;
 }
 
 footer{
